[package]
name = "communityid"
version = "0.1.1"
edition = "2021"
authors = ["Quentin JEROME <quentin.jerome@circl.lu>"]
description = "A practical implementation of the Community ID standard for network flow hashing"
keywords = ["community-id", "network", "flow", "hashing", "ids"]
license = "GPL-3.0"
rust-version = "1.56.1"
documentation = "https://docs.rs/communityid"
repository = "https://github.com/qjerome/communityid"

[package.metadata.docs.rs]
all-features = true

[dependencies]
base64 = "0.22"
sha1 = "0.10"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
